# catworld

./: .editorconfig  .env.example  .gitignore  Dockerfile  IMPROVEMENTS.md  README.md  RESEARCH.md  docker-compose.example.yml  eslint.config.mjs  instrumentation-client.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  reset-pw.ts  sentry.edge.config.ts  sentry.server.config.ts  test-upload.ts  tsconfig.json
.github/workflows/: ci.yml
e2e/: smoke.spec.ts
prisma/: schema.prisma  seed.ts
scripts/: bench-blob-only.ts  bench-delta-replace.ts  bench-nvarchar-staging.ts  bench-parallel.ts  bench-tablelock.ts  bench-tunning.ts  benchmark-columnstore.ts  benchmark-parser.ts  check-bulk-errors.ts  check-encoding.mjs  check-failures.ts  check-new-failures.ts  check_blob_rows.ts  check_both.ts  check_direct.ts  check_jobs.ts  check_latest.ts  check_max_data.ts  check_sources.ts  check_sources2.ts  check_sources3.ts  check_table3.ts  check_table_rows.ts  check_table_rows2.ts  check_uploads_ponto.ts  count_csv_rows.ts  count_duckdb_rows.ts  create-database.mjs  diagnose-row-loss.ts  duckdb_stream_count.ts  inspect-failed-preview.ts  query-perf.ts  repro-upload-fresh-preview.ts  stress-gzip-put.ts  stress-import.ts  stress-real-files.ts  test-e2e-import.ts  test_duckdb_fix.ts  test_import_ponto.ts  validate-output-conversion.ts
sdk/python/: LICENSE  README.md  pyproject.toml
sdk/python/src/catworld/: __init__.py  client.py  exceptions.py
sdk/python/tests/: test_client.py
src/: auth.ts  proxy.ts
src/app/: globals.css  layout.tsx
(+119 files in other folders)
